Update index.html with divs and state_bar_chart.js

--- a/lending_club_chloropleth/index.html
+++ b/lending_club_chloropleth/index.html
@@ -7,6 +7,14 @@
 </head>
 <body>
   <h1>US States</h1>
+  <div class="container">
+      <div class="row">
+          <div id="map-chart-area"></div>
+          <div id="bar-chart-area"></div>
+      </div>
+  </div>
   <script src="js/main.js"></script>
+  <!-- <script src="js/state_bar_chart.js"></script> -->
+  </script>
 </body>
 </html>
