Add genre_chart files

--- a/genre_roi/index.html
+++ b/genre_roi/index.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="css/style.css">
-  <script src="https://d3js.org/d3.v4.min.js"></script>
 </head>
 <body>
   <h1>ROI by Movie Genre</h1>
   <div class="container">
       <div class="row">
-          <div id="map-chart-area"></div>
+          <div id="chart-area"></div>
       </div>
   </div>
-  <script src="js/main.js"></script>
+  <script src="https://d3js.org/d3.v5.min.js"></script>
+  <script src="js/genre_chart.js"></script>
 </body>
 </html>
